cleaned top bar

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/fonts/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/resources/fonts/font-linearicons/style.css">
   </head>
+  <style>
+    .edit_form{
+      margin: 0 auto;
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
